# idea

./: .gitattributes  .gitignore  README.md  agent.py  agent_factory.py  benchmark_runner.py  cloud_setup.sh  constitution.yaml  critic.py  evaluation.py  experimenter.py  extract.py  fix_indent.py  fix_missing_plans.py  fix_stuck_tasks.py  governance.py  harvest.sh  hypothesis_store.py  llm_interface.py  master_ideas.md  orchestrator.py  reflection.py  requirements.txt  state_bundle.py  stats_engine.py  sync_cloud.sh  test_governance.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  tools.py
.pipeline/projects/advantage_player_cardgame_simulator_training/workspace/: pyproject.toml  requirements.txt
.pipeline/projects/advantage_player_cardgame_simulator_training/workspace/advantage_cardgames/: README.md  __init__.py  __main__.py  pyproject.toml
.pipeline/projects/advantage_player_cardgame_simulator_training/workspace/tests/: test_blackjack_training.py
.pipeline/projects/csv_analyzer/workspace/: pyproject.toml
.pipeline/projects/csv_analyzer/workspace/csv_analyzer/: __init__.py
.pipeline/projects/csv_analyzer/workspace/tests/: test_analyzer.py  test_cli.py  test_csv_io.py  test_integration.py
.pipeline/projects/drop_servicing_tool/workspace/: pyproject.toml  requirements.txt  tasks.md
.pipeline/projects/drop_servicing_tool/workspace/agents/: researcher.json  writer.json
.pipeline/projects/drop_servicing_tool/workspace/bulk_queues/: 042edfc751d9.jsonl  042edfc751d9_metadata.json  046e0ae7a2b3.jsonl  046e0ae7a2b3_metadata.json  059db4783789.jsonl  059db4783789_metadata.json  0746f80a8a9b.jsonl  0746f80a8a9b_metadata.json  078214fc780b.jsonl  078214fc780b_metadata.json  07f9a76f60cb.jsonl  07f9a76f60cb_metadata.json  0ce93eae9283.jsonl  0ce93eae9283_metadata.json  0d290561fca4.jsonl  0d290561fca4_metadata.json  0d3944022c66.jsonl  0d3944022c66_metadata.json  0f3c93108e2c.jsonl  0f3c93108e2c_metadata.json  13415d70fd3a.jsonl  13415d70fd3a_metadata.json  1342ccda5789.jsonl  1342ccda5789_metadata.json  14765b10b5ff.jsonl  14765b10b5ff_metadata.json  14e40df3e583.jsonl  14e40df3e583_metadata.json  1605a18b956e.jsonl  1605a18b956e_metadata.json  16cfd2a29a6b.jsonl  16cfd2a29a6b_metadata.json  175fcdbbb845.jsonl  175fcdbbb845_metadata.json  1c80d7770ecd.jsonl  1c80d7770ecd_metadata.json  1d6ad2529113.jsonl  1d6ad2529113_metadata.json  1eb1b5e42fdf.jsonl  1eb1b5e42fdf_metadata.json  (+382 more)
.pipeline/projects/drop_servicing_tool/workspace/drop_servicing_tool/: __init__.py  agent_config.py  agent_registry.py  agent_router.py  bulk_runner.py  cli.py  results_store.py  sop_schema.py  sop_store.py  template_library.py
.pipeline/projects/drop_servicing_tool/workspace/prompts/: default_step.md
.pipeline/projects/drop_servicing_tool/workspace/sops/: blog_post.yaml  cli_test_sop.yaml  dup.yaml  e2e_test_sop.yaml  new_sop.yaml  options_sop.yaml  options_test_sop.yaml  partial_fail_sop.yaml  test.yaml  test_empty_config_sop.yaml  test_multi_agent_sop.yaml  test_multi_agent_sop_fallback.yaml  test_multi_agent_sop_multi_step.yaml  test_multi_agent_sop_system_prompt.yaml  test_multi_agent_sop_temperature.yaml  test_sop.yaml  workflow_sop.yaml  workflow_test.yaml
.pipeline/projects/drop_servicing_tool/workspace/tests/: conftest.py  test_api_server.py  test_phase1.py  test_phase2.py  test_phase2_integration.py  test_phase3.py  test_phase4.py
.pipeline/projects/dropshipserviceecommerce_autoseo_autometa/workspace/: pyproject.toml
.pipeline/projects/dropshipserviceecommerce_autoseo_autometa/workspace/dropship_seo/: __init__.py  analyzer.py  batch_processor.py  caching.py  cli.py  config.py  exporters.py  meta_generator.py  models.py
.pipeline/projects/dropshipserviceecommerce_autoseo_autometa/workspace/tests/: test_models.py
.pipeline/projects/email_tool/: Dockerfile  LICENSE  Makefile  mkdocs.yml  pyproject.toml
.pipeline/projects/email_tool/cron/: email_tool_cron
.pipeline/projects/email_tool/docs/: changelog.md  contributing.md  development.md  index.md  installation.md  license.md
.pipeline/projects/email_tool/docs/development/: docker.md  setup.md  testing.md
.pipeline/projects/email_tool/phases/phase_1/: spec.md  tasks.md  validation_report.md
.pipeline/projects/email_tool/phases/phase_2/: COMPLETION_SUMMARY.md  spec.md  tasks.md  (+1 more)
.pipeline/projects/email_tool/state/: current_idea.json  master_plan.md  phase_retries.json
.pipeline/projects/email_tool/systemd/: email_tool_daemon.service
.pipeline/projects/email_tool/tests/: test_email_tool.py
.pipeline/projects/email_tool/workspace/: README.md  __init__.py  attachment_processor.py  attachment_types.py  models.py  pyproject.toml  requirements.txt  sample_actions.json  sample_rules.json
.pipeline/projects/gameagent/workspace/: pyproject.toml  trained_agent.json
.pipeline/projects/job_automation_tool/: pyproject.toml
.pipeline/projects/job_automation_tool/job_automation_tool/: __init__.py  cli.py  matcher.py  parser.py  profile.py
.pipeline/projects/job_automation_tool/state/: current_idea.json  master_plan.md
.pipeline/projects/job_automation_tool/tests/: test_cli.py  test_matcher.py  test_parser.py  test_profile.py
.pipeline/projects/job_automation_tool/workspace/: pyproject.toml
.pipeline/projects/seo_tool/workspace/: pyproject.toml  requirements.txt
.pipeline/projects/summarizer-tool/: README.md  main.py  plan.md  pyproject.toml  pytest.ini  requirements.txt
.pipeline/projects/summarizer-tool/docs/: phase2_completion_summary.md  validation_report.md
.pipeline/projects/summarizer-tool/summarizer_tool/: __init__.py  llm_interface.py  main.py  youtube_summarizer.py
.pipeline/projects/summarizer-tool/tests/: __init__.py  fixtures.py  test_integration_youtube.py  test_youtube_integration.py  test_youtube_summarizer.py
.pipeline/projects/udemy_training_tool/workspace/: pyproject.toml
.pipeline/projects/vr_room_for_stock_ticker_scanning/workspace/: main.py  pyproject.toml  requirements.txt  test_ticker.py
.pipeline/projects/youtube_workflow_tool/workspace/: pyproject.toml
(+1244 files in other folders)
