[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "job-automation-tool"
version = "0.1.0"
description = "Tool for automating job-related tasks: parsing job descriptions, matching candidates, and managing workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
job-automation = "job_automation_tool.cli:main"

[tool.setuptools.packages.find]
include = ["job_automation_tool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["job_automation_tool"]

[tool.coverage.report]
show_missing = true
skip_empty = true
