[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advantage-cardgames"
version = "0.1.0"
description = "Advantage Player Card Game Simulator Training — Monte Carlo strategy optimization for blackjack, video poker, poker, and slots"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
advantage-cardgames = "advantage_cardgames.cli.main:main"

[tool.setuptools.packages.find]
include = ["advantage_cardgames*"]

[tool.pytest.ini_options]
testpaths = ["advantage_cardgames/tests"]
