[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-analyzer"
version = "0.1.0"
description = "A CLI tool for analyzing CSV files with descriptive statistics and data profiling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "click>=8.0",
]

[project.scripts]
csv-analyzer = "csv_analyzer.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["csv_analyzer*"]
