[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropship-seo"
version = "0.1.0"
description = "Auto-generate SEO metadata for dropshipping product listings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
dropship-seo = "dropship_seo.cli:cli"

[tool.setuptools.packages.find]
include = ["dropship_seo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dropship_seo --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["dropship_seo"]
