[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gameagent"
version = "0.1.0"
description = "GridWorld game environment with RL agent training pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ga = "gameagent.cli.main:cli"

[tool.setuptools.packages.find]
include = ["gameagent*"]
