[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job_automation_tool"
version = "0.1.0"
description = "Job description parsing and profile matching tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.scripts]
job-tool = "job_automation_tool.cli:main"

[tool.setuptools.packages.find]
include = ["job_automation_tool*"]
