[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-tool"
version = "0.1.0"
description = "CLI tool for analyzing and scoring website SEO"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
seo-tool = "seo_tool.cli:cli"

[tool.setuptools.packages.find]
include = ["seo_tool*"]
