[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udemy-training-tool"
version = "0.1.0"
description = "Search, compare, and recommend Udemy courses"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
udemy = "udemy_training_tool.cli:cli"

[tool.setuptools.packages.find]
include = ["udemy_training_tool*"]
