[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vr-stock-ticker"
version = "0.1.0"
description = "VR stock ticker room — view and interact with live stock data in a 3D virtual environment"
requires-python = ">=3.10"
dependencies = [
    "pyglet>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["src*"]
